<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
 
    <Spinner
        android:id="@+id/spinner_image_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/image_size_arrays"
        android:prompt="@string/image_size_prompt" />
 
    <Spinner
        android:id="@+id/spinner_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:entries="@array/color_arrays"
        android:prompt="@string/color_prompt"/>
    
    <Spinner
        android:id="@+id/spinner_image_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/image_type_arrays"
        android:prompt="@string/image_type_prompt" />

    <EditText
        android:id="@+id/etSiteFilter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" 
        android:hint="@string/label_site_filter">

        <requestFocus />
    </EditText>
     
    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelButtonSubmit" 
        android:onClick="onSave"
     
     />
 
</LinearLayout>